Changed the gallery to scroll to the left/right instead of up/down by setting it to display grid and setting the grid flow to column and overflow-x to scroll. To make the movie header not scroll and stay fixed I put overflow to hidden on the main element.

--- a/css/movie-gallery.css
+++ b/css/movie-gallery.css
@@ -49,10 +49,14 @@ body > main {
     display: flex;
     padding: 0 4vw;
     margin-top: 14vw;
+    overflow: hidden;
 }
 
 .gallery {
+    display:grid;
+    grid-auto-flow: column;
     padding: 4vw 0;
+    overflow-x: scroll;
 }
 
 .gallery > article {
